--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "php.validate.executablePath": "/usr/local/bin/php"
+    "php.validate.executablePath": "/usr/local/bin/php",
+    "editor.formatOnPaste": true
 }
